--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
             steps.push({
                 description: `Cálculo do ouro por peça (Peso × Camada/1000 × Ouro)`,
                 value: `R$ ${valorOuroPorPeca.toFixed(2)}`,
-                formula: `${peso}g × (${camada}mg ÷ 1000) × R$ ${ouro}/g = R$ ${valorOuroPorPeca.toFixed(2)}`
+                formula: `${peso}g × ${camada} × R$ ${ouro}/g = R$ ${valorOuroPorPeca.toFixed(2)}`
             });
             
             // Passo 2: Adicionar valor bruto
