--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
             
             // Passo 1: Cálculo do ouro por peça
             steps.push({
-                description: `Cálculo do ouro por peça (Peso × Camada/1000 × Ouro)`,
+                description: `Cálculo do ouro por peça (Peso × Camada × Ouro)`,
                 value: `R$ ${valorOuroPorPeca.toFixed(2)}`,
                 formula: `${peso}g × ${camada} × R$ ${ouro}/g = R$ ${valorOuroPorPeca.toFixed(2)}`
             });
